generated/GramParser.py
# Generated from Gram.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GramParser ( Parser ):

    grammarFileName = "Gram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|>'", "';'", "':='", "'|'", "'<'", "','", 
                     "'>'", "'('", "')'", "'='", "'=>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NT_ID", "T_ID", "REGEX", "STRING", "CODE", "WS" ]

    RULE_file = 0
    RULE_begin = 1
    RULE_rulee = 2
    RULE_parserRulee = 3
    RULE_inAttrs = 4
    RULE_param = 5
    RULE_paramName = 6
    RULE_prods = 7
    RULE_prod = 8
    RULE_args = 9
    RULE_arg = 10
    RULE_lexerRule = 11
    RULE_term_value = 12

    ruleNames =  [ "file", "begin", "rulee", "parserRulee", "inAttrs", "param", 
                   "paramName", "prods", "prod", "args", "arg", "lexerRule", 
                   "term_value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    NT_ID=12
    T_ID=13
    REGEX=14
    STRING=15
    CODE=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GramParser.EOF, 0)

        def begin(self):
            return self.getTypedRuleContext(GramParser.BeginContext,0)


        def rulee(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.RuleeContext)
            else:
                return self.getTypedRuleContext(GramParser.RuleeContext,i)


        def getRuleIndex(self):
            return GramParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)




    def file_(self):

        localctx = GramParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 26
                self.begin()
                self.state = 28 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 27
                    self.rulee()
                    self.state = 30 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==12 or _la==13):
                        break



            self.state = 34
            self.match(GramParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeginContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NT_ID(self):
            return self.getToken(GramParser.NT_ID, 0)

        def getRuleIndex(self):
            return GramParser.RULE_begin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBegin" ):
                listener.enterBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBegin" ):
                listener.exitBegin(self)




    def begin(self):

        localctx = GramParser.BeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_begin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(GramParser.T__0)
            self.state = 37
            self.match(GramParser.NT_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parserRulee(self):
            return self.getTypedRuleContext(GramParser.ParserRuleeContext,0)


        def lexerRule(self):
            return self.getTypedRuleContext(GramParser.LexerRuleContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_rulee

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRulee" ):
                listener.enterRulee(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRulee" ):
                listener.exitRulee(self)




    def rulee(self):

        localctx = GramParser.RuleeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rulee)
        try:
            self.state = 45
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.parserRulee()
                self.state = 40
                self.match(GramParser.T__1)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.lexerRule()
                self.state = 43
                self.match(GramParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParserRuleeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NT_ID(self):
            return self.getToken(GramParser.NT_ID, 0)

        def prods(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.ProdsContext)
            else:
                return self.getTypedRuleContext(GramParser.ProdsContext,i)


        def inAttrs(self):
            return self.getTypedRuleContext(GramParser.InAttrsContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_parserRulee

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParserRulee" ):
                listener.enterParserRulee(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParserRulee" ):
                listener.exitParserRulee(self)




    def parserRulee(self):

        localctx = GramParser.ParserRuleeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parserRulee)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(GramParser.NT_ID)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 48
                self.inAttrs()


            self.state = 51
            self.match(GramParser.T__2)
            self.state = 52
            self.prods()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 53
                self.match(GramParser.T__3)
                self.state = 54
                self.prods()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InAttrsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NT_ID(self, i:int=None):
            if i is None:
                return self.getTokens(GramParser.NT_ID)
            else:
                return self.getToken(GramParser.NT_ID, i)

        def getRuleIndex(self):
            return GramParser.RULE_inAttrs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInAttrs" ):
                listener.enterInAttrs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInAttrs" ):
                listener.exitInAttrs(self)




    def inAttrs(self):

        localctx = GramParser.InAttrsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_inAttrs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(GramParser.T__4)
            self.state = 61
            self.match(GramParser.NT_ID)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 62
                self.match(GramParser.T__5)
                self.state = 63
                self.match(GramParser.NT_ID)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(GramParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramName(self):
            return self.getTypedRuleContext(GramParser.ParamNameContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = GramParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.paramName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NT_ID(self):
            return self.getToken(GramParser.NT_ID, 0)

        def getRuleIndex(self):
            return GramParser.RULE_paramName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamName" ):
                listener.enterParamName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamName" ):
                listener.exitParamName(self)




    def paramName(self):

        localctx = GramParser.ParamNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(GramParser.NT_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prod(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.ProdContext)
            else:
                return self.getTypedRuleContext(GramParser.ProdContext,i)


        def getRuleIndex(self):
            return GramParser.RULE_prods

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProds" ):
                listener.enterProds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProds" ):
                listener.exitProds(self)




    def prods(self):

        localctx = GramParser.ProdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_prods)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 77824) != 0):
                self.state = 75
                self.prod()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NT_ID(self):
            return self.getToken(GramParser.NT_ID, 0)

        def args(self):
            return self.getTypedRuleContext(GramParser.ArgsContext,0)


        def T_ID(self):
            return self.getToken(GramParser.T_ID, 0)

        def CODE(self):
            return self.getToken(GramParser.CODE, 0)

        def getRuleIndex(self):
            return GramParser.RULE_prod

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProd" ):
                listener.enterProd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProd" ):
                listener.exitProd(self)




    def prod(self):

        localctx = GramParser.ProdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_prod)
        self._la = 0 # Token type
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.match(GramParser.NT_ID)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 82
                    self.args()


                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(GramParser.T_ID)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.match(GramParser.CODE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.ArgContext)
            else:
                return self.getTypedRuleContext(GramParser.ArgContext,i)


        def getRuleIndex(self):
            return GramParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = GramParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(GramParser.T__7)
            self.state = 90
            self.arg()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 91
                self.match(GramParser.T__5)
                self.state = 92
                self.arg()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(GramParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NT_ID(self):
            return self.getToken(GramParser.NT_ID, 0)

        def T_ID(self):
            return self.getToken(GramParser.T_ID, 0)

        def CODE(self):
            return self.getToken(GramParser.CODE, 0)

        def getRuleIndex(self):
            return GramParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)




    def arg(self):

        localctx = GramParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 77824) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LexerRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramParser.RULE_lexerRule

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TokenRuleContext(LexerRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.LexerRuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def T_ID(self):
            return self.getToken(GramParser.T_ID, 0)
        def term_value(self):
            return self.getTypedRuleContext(GramParser.Term_valueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTokenRule" ):
                listener.enterTokenRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTokenRule" ):
                listener.exitTokenRule(self)


    class SkipRuleContext(LexerRuleContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.LexerRuleContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def T_ID(self):
            return self.getToken(GramParser.T_ID, 0)
        def term_value(self):
            return self.getTypedRuleContext(GramParser.Term_valueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkipRule" ):
                listener.enterSkipRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkipRule" ):
                listener.exitSkipRule(self)



    def lexerRule(self):

        localctx = GramParser.LexerRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_lexerRule)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = GramParser.TokenRuleContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(GramParser.T_ID)
                self.state = 103
                self.match(GramParser.T__9)
                self.state = 104
                self.term_value()
                pass

            elif la_ == 2:
                localctx = GramParser.SkipRuleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(GramParser.T_ID)
                self.state = 106
                self.match(GramParser.T__10)
                self.state = 107
                self.term_value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Term_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REGEX(self):
            return self.getToken(GramParser.REGEX, 0)

        def STRING(self):
            return self.getToken(GramParser.STRING, 0)

        def getRuleIndex(self):
            return GramParser.RULE_term_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm_value" ):
                listener.enterTerm_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm_value" ):
                listener.exitTerm_value(self)




    def term_value(self):

        localctx = GramParser.Term_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_term_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not(_la==14 or _la==15):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





